word-puzzle: fixed character spacing issue (spaces were too small).

--- a/test/pages/games/content/word-puzzle/word-puzzle.css
+++ b/test/pages/games/content/word-puzzle/word-puzzle.css
@@ -1,4 +1,4 @@
-* { box-sizing:border-box; margin:0px; outline:none; overflow:hidden; padding:0px; user-select:none; }
+* { box-sizing:border-box; margin:0px; outline:none; overflow:hidden; padding:0px; user-select:none; word-spacing:0.25em; }
 
 body, html { height:100%; width:100%; }
 
